<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.edu.scut.airgallery.activities.SingleMediaActivity">
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="never"
        android:orderInCategory="1" />
    <item
        android:id="@+id/action_doodle"
        android:title="@string/action_doodle"
        app:showAsAction="never"
        android:orderInCategory="2" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never"
        android:orderInCategory="3" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never"
        android:orderInCategory="4" />
</menu>