<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_albums">

    <fragment
        android:id="@+id/nav_albums"
        android:name="cn.edu.scut.airgallery.ui.albums.AlbumsFragment"
        android:label="@string/menu_albums"
        tools:layout="@layout/fragment_albums">

    </fragment>

    <fragment
        android:id="@+id/nav_receive"
        android:name="cn.edu.scut.airgallery.ui.receive.ReceiveFragment"
        android:label="@string/menu_receive"
        tools:layout="@layout/fragment_receive" />

    <fragment
        android:id="@+id/nav_about"
        android:name="cn.edu.scut.airgallery.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>